added mode endpoints to currency controller