@@ -11,24 +11,36 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class CurrencyServiceImpl extends BaseServiceImpl<Currency, CurrencyRepository> implements CurrencyService
 {
-	private final CurrencyRepository currencyRepository;
+	private final CurrencyRepository  currencyRepository;
+	private final ExchangeRateService exchangeRateService;
 
-	public CurrencyServiceImpl(CurrencyRepository currencyRepository)
+	public CurrencyServiceImpl(CurrencyRepository currencyRepository, ExchangeRateService exchangeRateService)
 	{
 		this.currencyRepository = currencyRepository;
+		this.exchangeRateService = exchangeRateService;
 	}
 
 	@Override
 	public List<String> getAllCurrencyCodes()
 	{
-		List<Currency> currencies = getRepository().findAll(Sort.by(Sort.Order.asc(Currency.CODE)));
-		return currencies.stream().map(Currency::getCode).filter(Objects::nonNull).collect(Collectors.toList());
+		return getAllCurrencies().stream().map(Currency::getCode).filter(Objects::nonNull).toList();
+	}
+
+	@Override
+	public List<CurrencyDTO> getAllCurrencyDTOs()
+	{
+		return getAllCurrencies().stream().map(this::toDTO).toList();
+	}
+
+	@Override
+	public List<Currency> getAllCurrencies()
+	{
+		return getRepository().findAll(Sort.by(Sort.Order.asc(Currency.CODE)));
 	}
 
 	@Override
@@ -36,9 +48,9 @@ public class CurrencyServiceImpl extends BaseServiceImpl<Currency, CurrencyRepos
 	{
 		removeAll();
 
-		if(!CollectionUtils.isEmpty(currList))
+		if (!CollectionUtils.isEmpty(currList))
 		{
-			List<Currency> currencies = currList.stream().map(currencyDTO -> Currency.builder().code(currencyDTO.getCode()).description(currencyDTO.getDescription()).build()).toList();
+			List<Currency> currencies = currList.stream().map(this::toEntity).toList();
 
 			saveAll(currencies);
 
@@ -49,8 +61,42 @@ public class CurrencyServiceImpl extends BaseServiceImpl<Currency, CurrencyRepos
 	}
 
 	@Override
+	public CurrencyDTO getCurrencyDTO(String code)
+	{
+		return toDTO(getRepository().findByCode(code));
+	}
+
+	@Override
+	public void removeAll()
+	{
+		exchangeRateService.removeAll();
+
+		super.removeAll();
+	}
+
+	@Override
 	public CurrencyRepository getRepository()
 	{
 		return currencyRepository;
+	}
+
+	private CurrencyDTO toDTO(Currency currency)
+	{
+		if (currency == null)
+		{
+			return null;
+		}
+
+		return CurrencyDTO.builder().code(currency.getCode()).description(currency.getDescription()).build();
+	}
+
+	private Currency toEntity(CurrencyDTO currencyDTO)
+	{
+		if (currencyDTO == null)
+		{
+			return null;
+		}
+
+		return Currency.builder().code(currencyDTO.getCode()).description(currencyDTO.getDescription()).build();
 	}
 }
